--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@
   box-sizing: border-box;
 }
 
+:root {
+  --text-color: white;
+  --bg-url: url(./assets/bg-mobile.jpg);
+  --stroke-color: rgba(255, 255, 255, 0.5);
+  --surface-color: rgba(255, 255, 255, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
+  --highlight-color: rgba(255, 255, 255, 0.2);
+  }
+
 body {
   background: var(--bg-url) no-repeat top center/cover;
   height: 100vh;
@@ -36,3 +45,4 @@ body * {
   line-height: 24px;
   margin-top: 8px;
 }
+
